[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/dialog_plugin/Nodes/editor_event_node/event_node_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialog_plugin/Nodes/editor_event_nodes/change_timeline_event_node/change_timeline_event_node.gd" type="Script" id=2]
[ext_resource path="res://addons/dialog_plugin/Nodes/editor_event_nodes/change_timeline_event_node/timeline_event_list.gd" type="Script" id=3]
[ext_resource path="res://addons/dialog_plugin/assets/Images/icons/event_icons/logic/change_timeline.png" type="Texture" id=4]


[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
content_margin_left = 24.0
bg_color = Color( 0.984314, 0.694118, 0.235294, 1 )
corner_radius_top_left = 16
corner_radius_bottom_left = 16
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 2.0
content_margin_bottom = 2.0
corner_radius_top_right = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[node name="ChangeTimelineEvent" instance=ExtResource( 1 )]
script = ExtResource( 2 )
event_color = Color( 0.984314, 0.694118, 0.235294, 1 )
Timeline_path = NodePath("HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/TimelineButton")
EventOption_path = NodePath("HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/EventOption")
EventList_path = NodePath("HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/EventOption/EventList")

[node name="EventIcon" parent="HContainer/Branch/VContainer" index="1"]
material = null
texture = ExtResource( 4 )

[node name="LowerBranch" parent="HContainer/Branch/VContainer" index="2"]
visible = false
margin_bottom = 36.0

[node name="EventName" parent="HContainer/HContainer/NameMargin" index="0"]
custom_styles/panel = SubResource( 1 )

[node name="EventNameLabel" parent="HContainer/HContainer/NameMargin/EventName/HBoxContainer" index="0"]
margin_right = 112.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Change Timeline"

[node name="TopContainer" parent="HContainer/HContainer/InfoMargin/InfoContainer" index="0"]
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer" index="0"]
margin_top = 4.0
margin_right = 131.0
margin_bottom = 24.0
text = "Change timeline to:"

[node name="TimelineButton" type="Button" parent="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer" index="1"]
margin_left = 134.0
margin_right = 177.0
margin_bottom = 28.0
mouse_filter = 1
text = "None"

[node name="EventOption" type="HBoxContainer" parent="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer" index="2"]
visible = false
margin_left = 179.0
margin_right = 309.0
margin_bottom = 28.0

[node name="VSeparator2" type="VSeparator" parent="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/EventOption" index="0"]
margin_right = 4.0
margin_bottom = 28.0

[node name="Label2" type="Label" parent="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/EventOption" index="1"]
margin_left = 8.0
margin_top = 7.0
margin_right = 97.0
margin_bottom = 21.0
text = "Start in event:"

[node name="EventList" type="OptionButton" parent="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/EventOption" index="2"]
margin_left = 101.0
margin_right = 130.0
margin_bottom = 28.0
text = "Empty"
items = [ "Empty", null, false, 0, null ]
selected = 0
script = ExtResource( 3 )

[node name="FoldButton" parent="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer" index="4"]
disabled = true

[node name="Properties" parent="HContainer/HContainer/InfoMargin/InfoContainer" index="1"]
custom_styles/panel = SubResource( 3 )

[node name="Skip" parent="HContainer/HContainer/InfoMargin/InfoContainer/Properties/Margin/VBox/BaseProperties" index="1"]
disabled = true

[node name="FileDialog" type="FileDialog" parent="." index="1"]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Abrir un Archivo"
mode = 0
filters = PoolStringArray( "*.tres;", "*.res;" )

[connection signal="pressed" from="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/TimelineButton" to="." method="_on_TimelineButton_pressed"]
[connection signal="item_selected" from="HContainer/HContainer/InfoMargin/InfoContainer/TopContainer/HContainer/EventOption/EventList" to="." method="_on_EventList_item_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
